--- a/now.json
+++ b/now.json
@@ -1,15 +1,15 @@
 {
   "version": 2,
-  "builds": [{ "src": "index.js", "use": "@now/node-server" }],
+  "builds": [{ "src": "/dist/index.js", "use": "@now/node-server" }],
   "routes": [
     {
       "src": "/users",
-      "dest": "/index.js",
+      "dest": "/dist/index.js",
       "methods": ["GET"]
     },
     {
       "src": "/user",
-      "dest": "/index.js",
+      "dest": "/dist/index.js",
       "methods": ["POST"]
     }
   ]
