--- a/package.json
+++ b/package.json
@@ -4,14 +4,25 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node dist/index.js",
+    "dev": "nodemon dist/index.js",
+    "server:build": "tsc"
   },
   "keywords": [],
   "author": "William Imoh",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^1.19.1"
+    "core-js": "^2.6.11",
+    "body-parser": "1.19.0",
+    "compression": "1.7.4",
+    "cookie-parser": "1.4.4",
+    "express-jwt": "5.3.1",
+    "jsonwebtoken": "^7.3.0",
+    "helmet": "3.21.3",
+    "uuid": "7.0.2",
+    "express": "4.17.1",
+    "nodemon": "2.0.2",
+    "ts-node": "^8.4.1",
+    "typescript": "3.8.3"
   }
 }
