--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon dist/index.js",
-    "server:build": "tsc"
+    "build": "tsc"
   },
   "keywords": [],
   "author": "William Imoh",
