--- a/now.json
+++ b/now.json
@@ -1,6 +1,16 @@
 {
-  "version": 2,
-  "name": "express",
-  "builds": [{ "src": "src/**/*.ts", "use": "@now/node" }],
-  "routes": [{ "src": "/(.*)", "dest": "/src/$1" }]
+    "version": 2,
+    "name": "express",
+    "builds": [
+        {
+            "src": "src/**/*.ts",
+            "use": "@now/node"
+        }
+    ],
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/src/$1"
+        }
+    ]
 }
