--- a/package.json
+++ b/package.json
@@ -1,28 +1,39 @@
 {
-  "name": "now-express",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node dist/index.js",
-    "dev": "nodemon dist/index.js",
-    "build": "tsc"
-  },
-  "keywords": [],
-  "author": "William Imoh",
-  "license": "MIT",
-  "dependencies": {
-    "core-js": "^2.6.11",
-    "body-parser": "1.19.0",
-    "compression": "1.7.4",
-    "cookie-parser": "1.4.4",
-    "express-jwt": "5.3.1",
-    "jsonwebtoken": "^7.3.0",
-    "helmet": "3.21.3",
-    "uuid": "7.0.2",
-    "express": "4.17.1",
-    "nodemon": "2.0.2",
-    "ts-node": "^8.4.1",
-    "typescript": "3.8.3"
-  }
+    "name": "now-express",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "start": "node dist/index.js",
+        "dev": "nodemon dist/index.js",
+        "build": "tsc"
+    },
+    "keywords": [],
+    "author": "William Imoh",
+    "license": "MIT",
+    "dependencies": {
+        "core-js": "^2.6.11",
+        "body-parser": "1.19.0",
+        "compression": "1.7.4",
+        "cookie-parser": "1.4.4",
+        "express-jwt": "5.3.1",
+        "jsonwebtoken": "^7.3.0",
+        "helmet": "3.21.3",
+        "uuid": "7.0.2",
+        "express": "4.17.1",
+        "nodemon": "2.0.2",
+        "ts-node": "^8.4.1",
+        "typescript": "3.8.3"
+    },
+    "devDependencies": {
+        "@types/node": "^12.11.1",
+        "@types/cors": "2.8.6",
+        "@types/express": "4.17.3",
+        "@types/jsonwebtoken": "8.3.8",
+        "@types/uuid": "7.0.0",
+        "codelyzer": "^5.2.1",
+        "concurrently": "5.1.0",
+        "ts-node": "^8.4.1",
+        "typescript": "~3.7.5"
+    }
 }
