--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
     "sourceMap": true,
     "target": "es6",
     "typeRoots": [
-      "../node_modules/@types"
+      "node_modules/@types"
     ]
   }
 }
