--- a/now.json
+++ b/now.json
@@ -10,7 +10,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/src/$1"
+            "dest": "/dist/$1"
         }
     ]
 }
