--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,9 +8,10 @@
     "moduleResolution": "node",
     "sourceMap": true,
     "target": "es6",
+    "outDir": "dist",
+    "types": ["node"],
     "typeRoots": [
       "node_modules/@types"
-    ],
-    "types": ["node"]
+    ]
   }
 }
