--- a/now.json
+++ b/now.json
@@ -4,13 +4,9 @@
     "builds": [
         {
             "src": "src/**/*.ts",
-            "use": "@now/node"
+            "use": "@now/node-server"
         }
     ],
-    "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/dist/$1"
-        }
+    "routes": [{"src": "/(.*)", "dest": "/dist/index.js"}
     ]
 }
