--- a/now.json
+++ b/now.json
@@ -4,7 +4,7 @@
     "builds": [
         {
             "src": "src/**/*.ts",
-            "use": "@now/node-server"
+            "use": "@now/node"
         }
     ],
     "routes": [{"src": "/(.*)", "dest": "/dist/index.js"}
