--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
         "nodemon": "2.0.2",
         "@types/node": "^12.11.1",
         "@types/cors": "2.8.6",
-        "@types/express": "4.17.3",
+
         "@types/jsonwebtoken": "8.3.8",
         "@types/uuid": "7.0.0",
         "codelyzer": "^5.2.1",
@@ -33,6 +33,6 @@
         "typescript": "~3.7.5"
     },
     "devDependencies": {
-
+        "@types/express": "4.17.3"
     }
 }
