--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "declaration": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "lib": ["es6", "dom"],
     "module": "commonjs",
     "moduleResolution": "node",
