--- a/now.json
+++ b/now.json
@@ -6,7 +6,7 @@
       "routes": [
         {
           "src": "/(.*)",
-          "dest": "/dist/index.js"
+          "dest": "src/index.ts"
         }
       ]
 }
