--- a/package.json
+++ b/package.json
@@ -22,17 +22,18 @@
         "uuid": "7.0.2",
         "express": "4.17.1",
         "nodemon": "2.0.2",
-        "@types/node": "^12.11.1",
-        "@types/cors": "2.8.6",
-
-        "@types/jsonwebtoken": "8.3.8",
-        "@types/uuid": "7.0.0",
-        "codelyzer": "^5.2.1",
-        "concurrently": "5.1.0",
+        "mysql": "2.18.1",
         "ts-node": "^8.4.1",
         "typescript": "~3.7.5"
     },
     "devDependencies": {
-        "@types/express": "4.17.3"
+        "@types/express": "4.17.3",
+        "@types/node": "^12.11.1",
+        "@types/cors": "2.8.6",
+        "@types/jsonwebtoken": "8.3.8",
+        "@types/uuid": "7.0.0",
+        "@types/mysql": "2.15.9",
+        "codelyzer": "^5.2.1",
+        "concurrently": "5.1.0"
     }
 }
