--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "license": "MIT",
     "dependencies": {
         "core-js": "^2.6.11",
+        "cors": "2.8.5",
         "body-parser": "1.19.0",
         "compression": "1.7.4",
         "cookie-parser": "1.4.4",
