--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
         "helmet": "3.21.3",
         "uuid": "7.0.2",
         "express": "4.17.1",
-        "nodemon": "2.0.2",
         "mysql": "2.18.1",
-        "ts-node": "^8.4.1",
-        "typescript": "~3.7.5"
+        "reflect-metadata": "0.1.13",
+        "typescript": "3.8.3",
+        "typeorm": "0.2.24"
     },
     "devDependencies": {
         "@types/express": "4.17.3",
@@ -33,7 +33,6 @@
         "@types/cors": "2.8.6",
         "@types/jsonwebtoken": "8.3.8",
         "@types/uuid": "7.0.0",
-        "@types/mysql": "2.15.9",
-        "concurrently": "5.1.0"
+        "@types/mysql": "2.15.9"
     }
 }
