--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
         "express": "4.17.1",
         "mysql": "2.18.1",
         "reflect-metadata": "0.1.13",
-        "typescript": "3.8.3",
-        "typeorm": "0.2.24"
+        "typescript": "3.8.3"
     },
     "devDependencies": {
         "@types/express": "4.17.3",
