--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "lib": ["es6", "dom"],
+    "lib": ["es6", "dom", "ESNext"],
     "module": "commonjs",
     "moduleResolution": "node",
     "sourceMap": true,
